<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_image"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#BC000000"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <!--            <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/bg_image" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#BC000000" />-->


            <View
                android:id="@+id/whiteSpace"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200" />

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/whiteSpace"
                android:layout_centerHorizontal="false"
                android:layout_marginLeft="@dimen/dp_50"
                android:src="@drawable/logo_img" />

            <LinearLayout
                android:id="@+id/linearEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/imgLogo"
                android:layout_below="@+id/imgLogo"
                android:layout_marginTop="@dimen/dp_20"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_number"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_16" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@drawable/whiterectangle"
                    android:padding="@dimen/dp_10"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/linearEmail"
                android:layout_below="@+id/linearEmail"
                android:layout_marginTop="@dimen/dp_20"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_16" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@drawable/whiterectangle"
                    android:inputType="textPassword"
                    android:padding="@dimen/dp_10"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/forgotpwd"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearRemeber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/linearPwd"
                android:layout_alignStart="@+id/linearPwd"
                android:layout_below="@+id/linearPwd"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_10">

                <android.support.v7.widget.AppCompatCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rememberme"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_40"
                    android:layout_gravity="center"
                    android:background="@drawable/pinkectangle"
                    android:drawableStart="@drawable/lobin_icon"
                    android:paddingEnd="@dimen/dp_5"
                    android:paddingStart="@dimen/dp_10"
                    android:text="@string/login"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <View
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_below="@+id/linearRemeber" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/space"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or_login"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_5"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_5">

                    <ImageView
                        android:layout_width="@dimen/dp_45"
                        android:layout_height="@dimen/dp_45"
                        android:layout_marginRight="@dimen/dp_10"
                        android:src="@drawable/fb_icon" />

                    <ImageView
                        android:layout_width="@dimen/dp_45"
                        android:layout_height="@dimen/dp_45"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:src="@drawable/tw_icon" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>

